# VibeMP

./: .gitignore  .gitmodules  CLAUDE.md  README.md
RakClient/: .gitignore  DEVELOPMENT.md
RakClient/app/: RakSAMPClient.xml  index.js  package-lock.json  package.json
RakClient/app/lib/: rak-client.js
RakClient/app/tests/: test-debug.js  test-events.js  test-register.js
RakClient/src/: RakPeer.cpp
RakClient/src/main/: main.cpp  main.h  misc_funcs.cpp
RakClient/src/net/: netrpc.cpp
Server/: config.json  docker-compose.yml  pawn.json
Server/docs/: admin-system.md  compiling.md  database.md  debugging-guide.md  eventbus-guide.md  module-guide.md  rpc-trace-reference.md  testing-guide.md
Server/docs/modules/: mod_admin.md  mod_auth.md  mod_db.md  mod_debug.md  mod_food_temp.md  mod_help.md  mod_inventory.md  mod_inventory_ui.md  mod_phone_temp.md  mod_player_inv.md  mod_playerdata.md  mod_spawn.md  mod_veh_trunk.md  mod_vehicles.md
Server/gamemodes/: mygamemode.pwn
Server/includes/core/: commands.inc  eventbus.inc  events.inc  module.inc  testing.inc
Server/includes/modules/: mod_admin.inc  mod_auth.inc  mod_db.inc  mod_debug.inc  mod_food_temp.inc  mod_help.inc  mod_inventory.inc  mod_inventory_ui.inc  mod_phone_temp.inc  mod_player_inv.inc  mod_playerdata.inc  mod_spawn.inc  mod_veh_trunk.inc  mod_vehicles.inc
Server/sql/: V1__create_accounts.sql  V2__add_admin_level.sql  V3__create_inventory.sql  V4__create_vehicles.sql
Server/src/RpcLogger/: CMakeLists.txt  dllmain.cpp
